# Agent-N9er

./: .env.example  .gitignore  README.md  docker-compose.yml  expand_verixio.py  launch.sh  netlify.toml  pyproject.toml  railway.json  requirements.txt  start-all.sh  verixio_full.md
agent_execution/: Dockerfile  main.py  requirements.txt
agent_launcher/: Dockerfile  main.py
agent_registry/: Dockerfile  main.py
bid_service/: Dockerfile  main.py  requirements.txt
bidding_marketplace/: Dockerfile  main.py
billing_service/: Dockerfile  main.py  requirements.txt
browser_service/: Dockerfile  airtable_watcher.py  asana_watcher.py  drive_watcher.py  github_watcher.py  gmail_watcher.py  main.py  notion_watcher.py  slack_watcher.py  trello_watcher.py
dashboard/: Dockerfile  middleware.js  next.config.js  package-lock.json  package.json
delivery_service/: Dockerfile  main.py
enterprise_tools/: Dockerfile  main.py  requirements.txt
evaluator_service/: Dockerfile  main.py
integration/: pipeline_events.py  watcher_router.py
integration_layer/: dashboard_summary.py  submit_task.py
memory_service/: Dockerfile  main.py
normalization_service/: Dockerfile  main.py
orchestrator/: Dockerfile  events.py  main.py
prospector_service/: Dockerfile  main.py  requirements.txt
ranking_engine/: Dockerfile  main.py
recurring_engine/: Dockerfile  main.py
reputation_ledger/: Dockerfile  main.py  requirements.txt
scripts/: backup_databases.py
shared/: agent_state_machine.py  audit.py  base_bid_client.py  circuit_breaker.py  config.py  database.py  ethics.py  (+11 more)
(+184 files in other folders)
